# ball_catcher

./: CMakeLists.txt  Install_OpenCV4_CUDA10.md  Readme.md  capture_frames.cpp  default.xml
common/: Settings.cpp  Settings.hpp  debug.h
config/: capture_frame.json
config/camera/: usbcam.json  usbcam_redball.json
src/: ball_tracker.cpp  capture_frames.cpp  move_to_point.cpp
src/common/: debug.h  error.cpp  error.h  macro.h  profiler.h
src/controller/: Serial.cpp  Serial.h  SpunkController.cpp  SpunkController.h
src/ext/nlohmann/: json.hpp
src/tracking/: ObjectDetector.cpp  ObjectDetector.hpp  TrackerWindow.cpp  TrackerWindow.hpp  statelocker.h  webcam.cpp  webcam.h
test/: ball_tracker.py  color_picker.py
test/gpu_test/: CMakeLists.txt  gpu_test.cpp
tracking/: webcam.cpp  webcam.h
